# AWS-CloudTrail-Security-AI-Agent

./: .gitignore  Dockerfile  Dockerfile.agent  Dockerfile.webapp  README.md  agent.py  app.py  cfn-template.yaml  deploy-on-agentcore.sh  docker-compose.yml  pyproject.toml  webapp.py
