[project]
name = "aws-cloudtrail-security-ai-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.118.0",
    "httpx>=0.28.1",
    "pydantic>=2.11.9",
    "strands-agents>=1.10.0",
    "strands-agents-tools>=0.2.9",
    "uvicorn[standard]>=0.37.0",
]
